[project]
name = "mlds-jobseekers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "python-levenshtein>=0.27.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.0.0",
    "spacy>=3.8.7",
    "xgboost>=3.0.2",
]
